widget_derive/tests/ui/declare/key_depends_forbidden_fail.stderr
error: The key attribute is not allowed to depend on others.
  --> tests/ui/declare/key_depends_forbidden_fail.rs:11:9
   |
11 |         key:  key1.key,
   |         ^^^   ^^^^
